# fantasy_football

./: Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  Makefile  config.py  main.py  manipulations.py  pyproject.toml
api/app/: forms.py  models.py  routes.py
api/app/templates/: index.html
api/csv/: ESPN_BigDawgs_Ranks_New.csv  FFC_HalfPPR_Ranks.csv  FFC_NonPPR_Ranks.csv
app/: __init__.py  models.py  routes.py
csv/: .~lock.football.csv#  ESPN_BigDawgs_Ranks.csv  ESPN_NonPPR_Ranks.csv  football.csv
migrations/versions/: 4755d997d93b_.py  99a69d38100f_.py  b661d6d7a7cf_users_table.py  dde80b80b966_.py
pkg/: config.py  football_functions.py
pkg/utils/: db_config.py  db_functions.py
