[tool.poetry]
name = "fantasy_football"
version = "0.1.0"
description = ""
authors = ["Justin Anderson <janderson@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "1.3.5"
flask_migrate = "^2.5"
flask = "^1.0"
flask_sqlalchemy = "^2.4"
psycopg2 = "^2.8"
pytest = "^5.0"
flask-wtf = "^0.14.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
